# reading_tracker

./: .env  .gitignore  .project-root  MANIFEST.in  README.md  dupes.txt  export.csv  export.xlsx  git_commit.sh  how_to_git_commit.md  project_structure.txt  pyproject.toml  pyproject.toml.backup  reading-tracker.service  reading_list.db  reading_list_template.xlsx  reading_tracker.code-workspace  requirements.txt  setup.bat  setup.py  setup.sh
config/: .env.example  overdrive.yaml
config/nginx/: README.md  nginx.conf  reading-tracker.conf
config/shell/: .bash_aliases  .bash_functions
config/systemd/: reading-tracker.service
csv_examples/reading_stats_finished_202502211_105400/: reading_stats_finished_20250221_103144_rereads.csv  reading_stats_finished_20250221_103144_summary.csv
data/db/: reading_list.db
data/db/backups/: my_database_export_20250226.xlsx  my_database_import_20250226.xlsx  (+4 more)
db_backups/: reading_list_2025-02-21-0608.db  reading_list_2025-02-21-0648.db
docs/: GETTING_STARTED.md  NGINX_SETUP.md  SSL_CERTIFICATE_RENEWAL.md  STYLES.md  TECHNICAL.md  TROUBLESHOOTING.md  project_structure.txt
docs/features/: tbr_manager.md
reports/: cover_gallery.html  reading_chain_report - Copy.html  reading_chain_report.html
reports/projected/: projected_reading_report_2025.html
reports/styles/: reading_chain.css
reports/tbr/: tbr.html
reports/yearly/: reading_projection_2025.html  reading_projection_2026.html  reading_projection_2030.html  reading_report_2021.html  reading_report_2022.html  reading_report_2023.html  reading_report_2024.html  reading_report_2025.html
scripts/: __init__.py  cleanup_codebase.py  cleanup_test_data.py  create_db.py  drop_column.py  excel_import.py  excel_template.py  inspect_chain.py  media_stats.py  query_db.py  reorder_columns.py  series_books.sh  series_stats.py  setup_server.sh  show_current_readings.py  update_book.py  update_read_db.py  update_version.py  verify_database_references.py  verify_dates.py  verify_imports.py  version.py
scripts/automation/: daily_chain_report.sh  daily_db_backup.sh  daily_goals_report.sh  daily_owned_report.sh  daily_report.sh
scripts/cleanup/: cleanup_codebase.py  cleanup_database.py  cleanup_test_books.py  cleanup_test_data.py  fix_permissions.py  organize_root.py  run_cleanup.py
scripts/database/: add_days_estimate_override_column.py  check_reading.py  cleanup_tables.py  db_cli.py  fix_chain.py  reorder_chain.py  update_cover_status.py
scripts/email/: config.py  fix_project_root.sh  reading_report.py  run_daily_report.sh
scripts/metadata/: config.py  fetch_book_metadata.py  generate_cover_gallery.py  rename_covers.py
scripts/metrics/: __init__.py  media_stats.py  projected_reading_report.py  reading_status.py  series_stats.py  yearly_reading_report.py
scripts/queries/: common_queries.py
scripts/reports/: reading_chain_report.py
scripts/server/: run_reports_server.py
scripts/setup/: create_db.py  create_template_dirs.sh  excel_import.py  excel_template.py  setup_report_logging.sh  setup_systemd.sh
scripts/updates/: __init__.py  update_book.py  update_read_db.py  update_version.py
scripts/utils/: __init__.py  add_column.py  fix_cover_permissions.sh  fix_permissions.sh  fix_report_permissions.py  fix_report_permissions.sh  inspect_chain.py  paths.py  remove_column.py  reorder_columns.py  search_book.py  verify_dates.py
src/: app.py  database.py
src/models/: __init__.py  base.py  book.py  inventory.py  isbn.py  overdrive.py  reading.py
src/queries/: __init__.py  reading_queries.py
src/reading_list/: __init__.py  config.py  main.py
src/services/: __init__.py  overdrive_service.py  reading_chain.py  statistics.py
src/utils/: __init__.py  constants.py  date_utils.py  path_utils.py  progress_calculator.py
static/css/: reading_chain_report.css  tbr_manager.css
static/js/: tbr_manager.js
tbr/: tbr.html
templates/: reading_chain.html
templates/reports/: STYLES.md  projected_reading_report.html  reading_chain_report.html  yearly_reading_report.html
templates/tbr/: index.html
tests/: __init__.py  run_tests.py
tests/database/: test_base.py  test_book_operations.py  test_inventory_operations.py  test_reading_chain.py  test_reading_operations.py
tests/framework/: test_imports.py  test_scripts.py
(+118 files in other folders)
