[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reading_list"
version = "1.7.6"
description = "Reading List Tracker"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "pandas>=1.3.0",
    "xlsxwriter>=3.0.0",
    "openpyxl>=3.0.0",
    "tabulate>=0.9.0",
    "termcolor>=2.0.0",
    "rich>=10.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",  # For API calls
    "aiohttp>=3.8.0",  # For async HTTP requests
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "pylint>=2.0.0",
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0"
]

[tool.setuptools]
packages = ["src", "scripts"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "1.7.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
